# ClipMind

./: .gitignore  README.md  app.py  audio_extraction.py  brainstorming.md  captions.ass  extracting.py  gemini.py  main.py  publishing.py  pyproject.toml  test_API.py  truncate.py  utils.py
doc/: brainstorming.md
utils/: config.py  editing.py  extracting.py  publishing.py
