[project]
name = "ClipMind"
version = "0.1.0"
description = "The streamlit app"
readme = "README.md"
requires-python = "==3.10.16"
# This project uses the system ffmpeg tool for video cliping.
# Ensure ffmpeg is installed and available on PATH.
dependencies = [
    "google-genai>=1.73.1",
    "python-dotenv>=1.2.2",
]
